hphp/test/zend/good/Zend/tests/errmsg_036.php.expectf

Fatal error: Undefined interface: parent in %s/errmsg_036.php on line 3
